<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayText">

    <TextView
        android:id="@+id/detect_text_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detected_text"
        android:textSize="30sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/how_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/long_press_to_copy_detected_text"
        android:textSize="20sp"
        android:layout_marginStart="20dp"

        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@id/detect_text_label"/>

    <TextView
        android:layout_below="@id/how_to"
        android:id="@+id/detected_text"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/black"
        android:hint="@string/find_detected_text_here"
        />

    <TextView
        android:layout_below="@id/detected_text"
        android:id="@+id/rating_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginEnd="20dp"
        android:layout_centerInParent="true"
        android:text="@string/rate_the_accuracy"
        />

    <RatingBar
        android:id="@+id/ratingBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="4"

        android:layout_below="@id/rating_label"
        android:layout_centerInParent="true" />



</RelativeLayout>